# agentic-patterns

./: README.md  crewai_flow.html  final_response.txt  pyproject.toml
src/agentic_patterns/: __init__.py  chain_of_thought.py  routing.py
